# megcc

./: CMakeLists.txt  MEMO.md  README.md
megcc/: main.c
meglex/: CMakeLists.txt
meglex/include/: dynamic_buffer.h  meglex.h  pattern.h  token.h
meglex/src/: dynamic_buffer.c  meglex.c  pattern.c  token.c
meglex/tests/: test_dynamic_buffer.c  test_token_analysis.c
meglex/tests/materials/: literal_string.txt  marks.txt  reached_EOF_in_quote.txt  two_chars.txt
megsym/: CMakeLists.txt
megsym/include/: dynamic_queue.h  megsym.h  symbol_factory.h  symbol_table.h
megsym/src/: dynamic_queue.c  megsym.c
